<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:prompt="@string/choisir_classe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choixClasse"
            android:spinnerMode="dialog"
            android:layout_weight="1" />

        <Spinner
            android:prompt="@string/choisir_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choixOption"
            android:spinnerMode="dialog"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genere_list_inscrit"
            android:id="@+id/button"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:enabled="false"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewEleve"

        android:elevation="10dp"
        android:background="#dfdddd"/>

</LinearLayout>